package NAntirobot;

import "library/cpp/getoptpb/proto/confoption.proto";

message TRobotSetArgs {
    option (NGetoptPb.Title) = "RobotSet upload";

    optional bool Debug = 1 [
        default = false,
        (NGetoptPb.Conf) = {
            Descr:  "should run in debug mode",
            Short: 'v',
            Long: "verbose"
        }
    ];

    required string Input = 2 [
        (NGetoptPb.Conf) = {
            Descr:  "input filename",
            Short: 'i',
            Long: "input"
        }
    ];

    required string Output = 3 [
        (NGetoptPb.Conf) = {
            Descr:  "output filename",
            Short: 'o',
            Long: "output"
        }
    ];

    required string Cluster = 4 [
        default = "arnold",
        (NGetoptPb.Conf) = {
            Descr:  "YtCluster",
            Short: 'C',
            Long: "cluster"
        }
    ];
}
